Fixed right-to-left alignment of dialog boxes by using the CSS right-to-left direction only when it makes sense (title bar, content).

--- a/viewer/org.eclipse.birt.report.viewer/birt/webcontent/birt/styles/dialogbase.css
+++ b/viewer/org.eclipse.birt.report.viewer/birt/webcontent/birt/styles/dialogbase.css
@@ -98,8 +98,6 @@
 /* Border style of content area for individual dialog content */
 .dialogContentContainer
 {
-	border-style: inset;
-	background-color: #F4F4F4; 
 }
 
 /* Area from bottom of dialog content container to bottom border */
